# simple-referral-project

./: .dockerignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
project/app_users/: admin.py  backends.py  common.py  forms.py  managers.py  models.py  serializers.py  urls.py  views.py
project/app_users/migrations/: 0001_initial.py
project/app_users/templates/app_users/: base.html  code_confirm.html  simulate_sending_code.html
project/project/: settings.py  urls.py
